Fix: CLI db command improvements
- Validate database path exists before connecting
- Show error for unknown subcommand instead of silent help
- Add JSON validation for hook-trigger data parameter
- Update docs to use correct binary name (smithers vs smithers-orchestrator)
- Remove references to unimplemented db query/phases subcommands

--- a/docs/components/codex.mdx
+++ b/docs/components/codex.mdx
@@ -5,7 +5,7 @@ description: OpenAI Codex CLI agent wrapper for code generation and analysis
 
 <Warning>
   **Planned Feature** - This component is not yet implemented.
-  See [github-actions-review-loop issue](/issues/github-actions-review-loop.md) for usage context and design.
+  See [GitHub issues](https://github.com/evmts/smithers/issues) for usage context and design.
 </Warning>
 
 # Codex Component
@@ -305,7 +305,7 @@ import { FallbackAgent, Codex, Claude } from 'smithers-orchestrator'
 <Steps>
   <Step title="Design Phase">
     Component designed for multi-provider failover in review system.
-    [View issue](/issues/github-actions-review-loop.md)
+    [View on GitHub](https://github.com/evmts/smithers/issues)
   </Step>
 
   <Step title="CLI Wrapper (Pending)">
@@ -479,7 +479,7 @@ const bugAnalysisSchema = z.object({
   <Card
     title="GitHub Actions Review Loop"
     icon="github"
-    href="/issues/github-actions-review-loop.md"
+    href="https://github.com/evmts/smithers/issues"
   >
     Primary use case - multi-provider review system
   </Card>
@@ -550,4 +550,4 @@ With Codex component:
 
 ## Feedback
 
-If you have feedback on this planned component, please comment on the [github-actions-review-loop issue](/issues/github-actions-review-loop.md).
+If you have feedback on this planned component, please [open an issue](https://github.com/evmts/smithers/issues).
