--- a/docs/components/fallback-agent.mdx
+++ b/docs/components/fallback-agent.mdx
@@ -5,7 +5,7 @@ description: Multi-provider failover component with automatic retry and error ha
 
 <Warning>
   **Planned Feature** - This component is not yet implemented.
-  See [github-actions-review-loop issue](/issues/github-actions-review-loop.md) for usage context.
+  See [GitHub issues](https://github.com/evmts/smithers/issues) for usage context.
 </Warning>
 
 # FallbackAgent Component
@@ -244,7 +244,7 @@ Ensures workflow continues even if entire provider goes down.
 <Steps>
   <Step title="Design Phase">
     Component designed for github-actions-review-loop use case.
-    [View issue](/issues/github-actions-review-loop.md)
+    [View on GitHub](https://github.com/evmts/smithers/issues)
   </Step>
 
   <Step title="Core Implementation (Pending)">
@@ -411,7 +411,7 @@ const useExperimentalModel = Math.random() < 0.1  // 10% traffic
   <Card
     title="GitHub Actions Review Loop"
     icon="github"
-    href="/issues/github-actions-review-loop.md"
+    href="https://github.com/evmts/smithers/issues"
   >
     Primary use case - review system with multi-provider fallback
   </Card>
@@ -485,4 +485,4 @@ With FallbackAgent:
 
 ## Feedback
 
-If you have feedback on this planned component, please comment on the [github-actions-review-loop issue](/issues/github-actions-review-loop.md).
+If you have feedback on this planned component, please [open an issue](https://github.com/evmts/smithers/issues).
