--- a/docs/components/gemini.mdx
+++ b/docs/components/gemini.mdx
@@ -5,7 +5,7 @@ description: Google Gemini AI agent wrapper with multi-modal support and structu
 
 <Warning>
   **Planned Feature** - This component is not yet implemented.
-  See [github-actions-review-loop issue](/issues/github-actions-review-loop.md) for usage context and design.
+  See [GitHub issues](https://github.com/evmts/smithers/issues) for usage context and design.
 </Warning>
 
 # Gemini Component
@@ -357,7 +357,7 @@ import { FallbackAgent, Claude, Codex, Gemini } from 'smithers-orchestrator'
 <Steps>
   <Step title="Design Phase">
     Component designed for multi-provider fallback in review workflows.
-    [View issue](/issues/github-actions-review-loop.md)
+    [View on GitHub](https://github.com/evmts/smithers/issues)
   </Step>
 
   <Step title="API Client (Pending)">
@@ -531,7 +531,7 @@ Text and images combined in single request.
   <Card
     title="GitHub Actions Review Loop"
     icon="github"
-    href="/issues/github-actions-review-loop.md"
+    href="https://github.com/evmts/smithers/issues"
   >
     Multi-provider review system - Gemini as fallback option
   </Card>
@@ -596,4 +596,4 @@ With Gemini component:
 
 ## Feedback
 
-If you have feedback on this planned component, please comment on the [github-actions-review-loop issue](/issues/github-actions-review-loop.md).
+If you have feedback on this planned component, please [open an issue](https://github.com/evmts/smithers/issues).
