--- a/docs/components/worktree.mdx
+++ b/docs/components/worktree.mdx
@@ -5,7 +5,7 @@ description: Git worktree isolation component for parallel branch execution and 
 
 <Warning>
   **Planned Feature** - This component is not yet implemented.
-  See [worktree-component issue](/issues/worktree-component.md) for detailed design and implementation plan.
+  
 </Warning>
 
 # Worktree Component
@@ -436,14 +436,6 @@ Each iteration starts from clean main branch state.
 
 <CardGroup cols={2}>
   <Card
-    title="Worktree Component Issue"
-    icon="github"
-    href="/issues/worktree-component.md"
-  >
-    Detailed design including git utilities, context provider, and agent integration
-  </Card>
-
-  <Card
     title="Claude Component"
     icon="robot"
     href="/components/claude.mdx"
@@ -508,4 +500,4 @@ With Worktree component:
 
 ## Feedback
 
-If you have feedback on this planned component, please comment on the [worktree-component issue](/issues/worktree-component.md).
+If you have feedback on this component, please [open an issue](https://github.com/evmts/smithers/issues).
