Fix: Improve error handling across codebase
- capture.ts: Distinguish ENOENT from other file read errors
- root.ts: Log unexpected completion promise rejections
- report-generator.ts: Log Claude analysis failures
- TUI hooks: Replace silent catches with console.debug logging
- SmithersProvider.tsx: Add .catch() to async IIFE for safety
- git.ts/jj.ts: Preserve error stack traces with .cause

--- a/docs/components/switch.mdx
+++ b/docs/components/switch.mdx
@@ -5,7 +5,7 @@ description: Multi-way branching component for value-based conditional execution
 
 <Warning>
   **Planned Feature** - This component is not yet implemented.
-  See [control-flow-components issue](/issues/control-flow-components.md) for design details and implementation plan.
+  See [GitHub issues](https://github.com/evmts/smithers/issues) for design details and implementation plan.
 </Warning>
 
 # Switch Component
@@ -349,7 +349,7 @@ interface TaskType {
 <Steps>
   <Step title="Design Phase">
     API designed as part of control-flow-components issue.
-    [View issue](/issues/control-flow-components.md)
+    [View on GitHub](https://github.com/evmts/smithers/issues)
   </Step>
 
   <Step title="Prerequisites (Pending)">
@@ -547,7 +547,7 @@ Custom serializers enable efficient storage and comparison.
   <Card
     title="Control Flow Components Issue"
     icon="github"
-    href="/issues/control-flow-components.md"
+    href="https://github.com/evmts/smithers/issues"
   >
     Parent issue with scoping design, ExecutionBoundary, and implementation infrastructure
   </Card>
@@ -586,4 +586,4 @@ Custom serializers enable efficient storage and comparison.
 
 ## Feedback
 
-If you have feedback on this planned component, please comment on the [control-flow-components issue](/issues/control-flow-components.md).
+If you have feedback on this planned component, please [open an issue](https://github.com/evmts/smithers/issues).
