--- a/docs/components/while.mdx
+++ b/docs/components/while.mdx
@@ -5,7 +5,7 @@ description: Iterative loop component that repeats children until condition met 
 
 <Warning>
   **Planned Feature** - This component is not yet implemented.
-  See [while-component issue](/issues/while-component.md) for design details and implementation plan.
+  See [GitHub issues](https://github.com/evmts/smithers/issues) for design details and implementation plan.
 </Warning>
 
 # While Component
@@ -263,12 +263,12 @@ export function FixAndRetryWorkflow() {
 <Steps>
   <Step title="Design Phase">
     Issue created with state machine, scoping design, and Ralph refactor plan.
-    [View issue](/issues/while-component.md)
+    [View on GitHub](https://github.com/evmts/smithers/issues)
   </Step>
 
   <Step title="Prerequisites (Blocked)">
     Requires control-flow infrastructure: ExecutionBoundary, makeScopeId, tasks.scope_id.
-    [Blocked by control-flow-components.md](/issues/control-flow-components.md)
+    [View dependencies on GitHub](https://github.com/evmts/smithers/issues)
   </Step>
 
   <Step title="Implementation (Pending)">
@@ -447,7 +447,7 @@ Scoping handles nesting: `root.while.outer.N.while.inner.M`
   <Card
     title="While Component Issue"
     icon="github"
-    href="/issues/while-component.md"
+    href="https://github.com/evmts/smithers/issues"
   >
     Full design with state machine, scoping requirements, Ralph refactor plan
   </Card>
@@ -455,7 +455,7 @@ Scoping handles nesting: `root.while.outer.N.while.inner.M`
   <Card
     title="Control Flow Components"
     icon="code-branch"
-    href="/issues/control-flow-components.md"
+    href="https://github.com/evmts/smithers/issues"
   >
     Parent issue covering ExecutionBoundary, scoping infrastructure shared by If/While/Switch
   </Card>
@@ -486,4 +486,4 @@ Scoping handles nesting: `root.while.outer.N.while.inner.M`
 
 ## Feedback
 
-If you have feedback on this planned component, please comment on the [while-component issue](/issues/while-component.md).
+If you have feedback on this planned component, please [open an issue](https://github.com/evmts/smithers/issues).
