--- a/docs/components/worktree.mdx
+++ b/docs/components/worktree.mdx
@@ -3,16 +3,11 @@ title: Worktree Component
 description: Git worktree isolation component for parallel branch execution and safe experimentation
 ---
 
-<Warning>
-  **Planned Feature** - This component is not yet implemented.
-  
-</Warning>
-
 # Worktree Component
 
 Automatically provision git worktrees and ensure all nested agent components operate within isolated directory contexts. Enables parallel execution on different branches, safe experimentation, and clean phase isolation.
 
-## Planned API
+## API
 
 ```tsx
 interface WorktreeProps {
