--- a/docs/installation.mdx
+++ b/docs/installation.mdx
@@ -113,7 +113,7 @@ Create a test file `test.tsx`:
 ```tsx
 #!/usr/bin/env bun
 
-import { createSmithersRoot } from "smithers";
+import { createSmithersRoot } from "smithers-orchestrator";
 import { createSmithersDB } from "smithers-orchestrator/db";
 import { SmithersProvider } from "smithers-orchestrator/components/SmithersProvider";
 import { Claude } from "smithers-orchestrator/components/Claude";
