--- a/docs/api-reference/phases.mdx
+++ b/docs/api-reference/phases.mdx
@@ -101,7 +101,7 @@ interface Phase {
 The `<Phase>` component automatically integrates with this module:
 
 ```tsx
-import { Phase } from "smithers-orchestrator/components";
+import { Phase } from "smithers-orchestrator";
 
 <Orchestration>
   <Phase name="research">
