--- a/docs/api-reference/steps.mdx
+++ b/docs/api-reference/steps.mdx
@@ -123,7 +123,7 @@ interface Step {
 The `<Step>` component automatically integrates with this module:
 
 ```tsx
-import { Step } from "smithers-orchestrator/components";
+import { Step } from "smithers-orchestrator";
 
 <Phase name="implementation">
   <Step name="setup-database">
