--- a/docs/components/commit.mdx
+++ b/docs/components/commit.mdx
@@ -10,7 +10,7 @@ The `<Commit>` component creates git commits with optional notes and metadata tr
 ## Basic Usage
 
 ```tsx
-import { Commit } from "smithers-orchestrator/components/Git";
+import { Commit } from "smithers-orchestrator";
 
 <Commit
   message="feat: Add user authentication"
