--- a/docs/components/constraints.mdx
+++ b/docs/components/constraints.mdx
@@ -10,7 +10,7 @@ The `<Constraints>` component defines rules and constraints that guide Claude's 
 ## Usage
 
 ```tsx
-import { Constraints } from "smithers-orchestrator/components";
+import { Constraints } from "smithers-orchestrator";
 
 <Claude>
   <Constraints>
