--- a/docs/components/persona.mdx
+++ b/docs/components/persona.mdx
@@ -10,7 +10,7 @@ The `<Persona>` component defines a role or persona for Claude to adopt. Persona
 ## Usage
 
 ```tsx
-import { Persona } from "smithers-orchestrator/components";
+import { Persona } from "smithers-orchestrator";
 
 <Claude>
   <Persona role="security expert">
