--- a/docs/components/step.mdx
+++ b/docs/components/step.mdx
@@ -10,7 +10,7 @@ The `<Step>` component represents an individual step within a workflow phase, pr
 ## Basic Usage
 
 ```tsx
-import { Step } from "smithers";
+import { Step } from "smithers-orchestrator";
 
 <Phase name="Implementation">
   <Step name="Create API">
