--- a/docs/components/subagent.mdx
+++ b/docs/components/subagent.mdx
@@ -10,7 +10,7 @@ The `<Subagent>` component wraps child components in a named execution boundary.
 ## Usage
 
 ```tsx
-import { Subagent } from "smithers-orchestrator/components";
+import { Subagent } from "smithers-orchestrator";
 
 <Subagent name="researcher">
   <Claude>Research the topic thoroughly.</Claude>
