--- a/docs/components/task.mdx
+++ b/docs/components/task.mdx
@@ -10,7 +10,7 @@ The `<Task>` component represents a trackable task within a workflow. Tasks can 
 ## Usage
 
 ```tsx
-import { Task } from "smithers-orchestrator/components";
+import { Task } from "smithers-orchestrator";
 
 <Phase name="implementation">
   <Task done={false}>Research existing patterns</Task>
