--- a/docs/installation.mdx
+++ b/docs/installation.mdx
@@ -39,19 +39,19 @@ For programmatic use in your own scripts:
 <CodeGroup>
 
 ```bash bun (recommended)
-bun add smithers
+bun add smithers-orchestrator
 ```
 
 ```bash npm
-npm install smithers
+npm install smithers-orchestrator
 ```
 
 ```bash pnpm
-pnpm add smithers
+pnpm add smithers-orchestrator
 ```
 
 ```bash yarn
-yarn add smithers
+yarn add smithers-orchestrator
 ```
 
 </CodeGroup>
@@ -65,9 +65,9 @@ yarn add smithers
 | [Bun](https://bun.sh) | 1.0+ | JavaScript runtime |
 | [Claude Code](https://www.npmjs.com/package/@anthropic-ai/claude-code) | latest | Agent execution |
 
-### Included
+### Bundled Dependencies
 
-These are bundled with Smithers:
+These are included as dependencies of smithers-orchestrator (not peer deps):
 
 - **react** - Reactive primitives for state management
 - **bun:sqlite (reactive-sqlite wrapper)** - SQLite for persistence
