--- a/docs/components/sqlite.mdx
+++ b/docs/components/sqlite.mdx
@@ -10,7 +10,7 @@ The `<Sqlite>` component configures an MCP (Model Context Protocol) server that 
 ## Basic Usage
 
 ```tsx
-import { Sqlite } from "smithers-orchestrator/components/MCP";
+import { Sqlite } from "smithers-orchestrator";
 
 <Claude model="sonnet" maxTurns={5}>
   <Sqlite path="./analytics.db">
