--- a/docs/components/if.mdx
+++ b/docs/components/if.mdx
@@ -38,11 +38,17 @@ import { If } from "smithers-orchestrator";
 ## Multi-Phase Workflow
 
 ```tsx
-import { useState } from "react";
-import { If, Ralph, Phase, Claude } from "smithers-orchestrator";
+import { If, Ralph, Phase, Claude, useSmithers, useQueryValue } from "smithers-orchestrator";
 
 function Workflow() {
-  const [phase, setPhase] = useState("research");
+  const { db } = useSmithers();
+  
+  const phase = useQueryValue<string>(
+    db.db,
+    "SELECT value FROM state WHERE key = 'phase'"
+  ) ?? "research";
+  
+  const setPhase = (p: string) => db.state.set('phase', p);
 
   return (
     <Ralph maxIterations={10}>
