--- a/docs/components/stop.mdx
+++ b/docs/components/stop.mdx
@@ -83,7 +83,7 @@ function ConditionalWorkflow() {
   <Card title="Human" icon="user" href="/components/human">
     Human approval
   </Card>
-  <Card title="Orchestration" icon="sitemap" href="/components/orchestration">
+  <Card title="SmithersProvider" icon="sitemap" href="/components/smithers-provider">
     Workflow control
   </Card>
 </CardGroup>
