--- a/docs/components/smithers.mdx
+++ b/docs/components/smithers.mdx
@@ -327,7 +327,7 @@ Monitor subagent progress:
   <Card title="Claude Component" icon="robot" href="/components/claude">
     Core agent component
   </Card>
-  <Card title="Orchestration" icon="sitemap" href="/components/orchestration">
+  <Card title="SmithersProvider" icon="sitemap" href="/components/smithers-provider">
     Top-level workflow control
   </Card>
 </CardGroup>
